# deps_installer

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: build.yaml
deps_installer/: deps_installer.py
src/: example_use.py
src/deps_installer/: __init__.py
